# ifcb-features-service

./: .gitignore  Dockerfile  README.md  example_client.py  pyproject.toml
ifcb_features_service/: main.py  service.py
