[project]
name = "ifcb-features-service"
version = "0.0.0"
description = "IFCB Features Service"
readme = "README.md"
authors = [{ name = "Joe Futrelle", email = "jfutrelle@whoi.edu" }]
license = { text = "MIT" }
requires-python = "<3.13"

dependencies = [
    'amplify-stateless @ git+https://github.com/WHOIGit/amplify-stateless-microservice.git',
    'ifcb-features @ git+https://github.com/WHOIGit/ifcb-features.git@v0.1'
]

[tool.hatch.build.targets.wheel]
packages = ["ifcb_features_service"]

# build-system for hatchling
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
